examples/kraken-interpol/public/templates/errors/http_404.int
from errors import render
render(404, "File Not Found")
